# talk2me

./: .gitignore  Makefile  pyproject.toml
talk2me/: __main__.py  app.py  utils.py
talk2me/utils/sphinx/: audio_transcribe.py
talk2me/utils/whisper/: audio_transcribe.py
tests/: conftest.py
tests/unit/: test_utils.py
